// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns Cluster resource definitions in global search: SearchDefinitions-Cluster-globalhub 1`] = `
[
  {
    "cell": <CreateGlobalSearchDetailsLink
      item={
        {
          "cluster": "test-cluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Cluster",
          "label": "testLabel=label; testLabel1=label1",
          "managedHub": "global-hub",
          "name": "test-cluster",
          "namespace": "test-cluster",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "global-hub",
    "header": "Managed hub",
    "id": "managedHub",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "managedHub",
  },
  {
    "cell": "-",
    "header": "Available",
    "id": "ManagedClusterConditionAvailable",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "ManagedClusterConditionAvailable",
  },
  {
    "cell": "-",
    "header": "Hub accepted",
    "id": "HubAcceptedManagedCluster",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "HubAcceptedManagedCluster",
  },
  {
    "cell": "-",
    "header": "Joined",
    "id": "ManagedClusterJoined",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "ManagedClusterJoined",
  },
  {
    "cell": "-",
    "header": "Nodes",
    "id": "nodes",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "nodes",
  },
  {
    "cell": "-",
    "header": "Kubernetes version",
    "id": "kubernetesVersion",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "kubernetesVersion",
  },
  {
    "cell": "-",
    "header": "CPU",
    "id": "cpu",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "cpu",
  },
  {
    "cell": "-",
    "header": "Memory",
    "id": "memory",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "memory",
  },
  {
    "cell": "-",
    "header": "Console URL",
    "id": "cluster-consoleURL",
    "isFirstVisitChecked": true,
    "order": 10,
    "sort": "consoleURL",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 11,
    "sort": "label",
  },
]
`;

exports[`Correctly returns CreateApplicationTopologyLink - global search 1`] = `
<body>
  <div>
    <a
      class="pf-v6-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-6"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
      target="_blank"
    >
      <span
        class="pf-v6-c-button__text"
      >
        View topology
      </span>
      <span
        class="pf-v6-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateApplicationTopologyLink 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
    >
      View topology
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - ACM-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testApplicationNamespace/testApplicationName/details?apiVersion=application.app.k8s.io&cluster=cluster"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Cluster 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Default 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - HUB-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/testPolicyNamespace/testPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Managed-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPolicy%26namespace%3DtestPolicyNamespace%26name%3DtestPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - NON-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DApplication%26namespace%3DtestApplicationNamespace%26name%3DtestApplicationName"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - PolicyReport 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testPolicyReportNamespace/testPolicyReportNamespace/overview?showClusterIssues%3Dtrue"
    >
      testPolicyReport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateExternalLink from clusterip 1`] = `"http://clusterip"`;

exports[`Correctly returns CreateExternalLink from consoleURL 1`] = `
<AcmButton
  component="a"
  href="http://consoleurl"
  icon={<ExternalLinkAltIcon />}
  iconPosition="right"
  isInline={true}
  target="_blank"
  variant="link"
>
  Launch
</AcmButton>
`;

exports[`Correctly returns CreateExternalVMLink 1`] = `
<body>
  <div>
    <a
      class="pf-v6-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-7"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      href="https://testCluster.com/k8s/ns/testVM/kubevirt.io~v1~VirtualMachine/testVM"
      target="_blank"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Details
      </span>
      <span
        class="pf-v6-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Application resource 1`] = `
<body>
  <div>
    <a
      class="pf-v6-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-3"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/applications/details/testClusterNamespace/testClusterName/details?apiVersion=application.app.k8s.io&cluster=leaf-cluster"
      target="_blank"
    >
      <span
        class="pf-v6-c-button__text"
      >
        testClusterName
      </span>
      <span
        class="pf-v6-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Cluster resource 1`] = `
<body>
  <div>
    <a
      class="pf-v6-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-2"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview?cluster%3Dundefined%26kind%3DCluster%26namespace%3DtestClusterNamespace%26name%3DtestClusterName"
      target="_blank"
    >
      <span
        class="pf-v6-c-button__text"
      >
        testClusterName
      </span>
      <span
        class="pf-v6-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Policy resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/default/global-policy"
    >
      global-policy
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster PolicyReport resource 1`] = `
<body>
  <div>
    <a
      class="pf-v6-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-5"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/infrastructure/clusters/details/testClusterNamespace/testClusterNamespace/overview?showClusterIssues%3Dtrue"
      target="_blank"
    >
      <span
        class="pf-v6-c-button__text"
      >
        leaf-cluster-policyreport
      </span>
      <span
        class="pf-v6-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster default resource 1`] = `
<body>
  <div>
    <a
      class="pf-v6-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-1"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      href="https://leaf-hub.com/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
      target="_blank"
    >
      <span
        class="pf-v6-c-button__text"
      >
        testPodName
      </span>
      <span
        class="pf-v6-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Application resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testClusterNamespace/testClusterName/details?apiVersion=application.app.k8s.io"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Cluster resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Policy resource 1`] = `
<body>
  <div>
    <a
      class="pf-v6-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-4"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/governance/policies/details/default/hub-a-policy-test"
      target="_blank"
    >
      <span
        class="pf-v6-c-button__text"
      >
        hub-a-policy-test
      </span>
      <span
        class="pf-v6-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub PolicyReport resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterNamespace/testClusterNamespace/overview?showClusterIssues%3Dtrue"
    >
      local-cluster-policyreport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub default resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns VMLaunchLinks 1`] = `
<body>
  <div>
    <div
      style="display: contents;"
    >
      <span
        class="pf-v6-c-label pf-m-filled pf-m-clickable"
      >
        <button
          class="pf-v6-c-label__content pf-m-clickable"
          type="button"
        >
          <span
            class="pf-v6-c-label__text"
          >
            Launch links
          </span>
        </button>
      </span>
    </div>
  </div>
</body>
`;

exports[`Correctly returns VirtualMachineSnapshot indications 1`] = `
<body>
  <div>
    <div
      class="pf-v6-c-label-group pf-m-vertical"
    >
      <div
        class="pf-v6-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v6-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-filled css-wm1cuv"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  indication1
                </span>
              </span>
            </span>
          </li>
          <li
            class="pf-v6-c-label-group__list-item"
          >
            <span
              class="pf-v6-c-label pf-m-filled css-wm1cuv"
            >
              <span
                class="pf-v6-c-label__content"
              >
                <span
                  class="pf-v6-c-label__text"
                >
                  indication2
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-application 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "created",
  },
  {
    "cell": <CreateApplicationTopologyLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
      t={[Function]}
    />,
    "header": "Topology",
    "id": "application-topology",
    "isFirstVisitChecked": true,
    "order": 4,
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-channel 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Type",
    "id": "type",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "type",
  },
  {
    "cell": "-",
    "header": "Pathname",
    "id": "pathname",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "pathname",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cluster 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "-",
    "header": "Available",
    "id": "ManagedClusterConditionAvailable",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "ManagedClusterConditionAvailable",
  },
  {
    "cell": "-",
    "header": "Hub accepted",
    "id": "HubAcceptedManagedCluster",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "HubAcceptedManagedCluster",
  },
  {
    "cell": "-",
    "header": "Joined",
    "id": "ManagedClusterJoined",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "ManagedClusterJoined",
  },
  {
    "cell": "-",
    "header": "Nodes",
    "id": "nodes",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "nodes",
  },
  {
    "cell": "-",
    "header": "Kubernetes version",
    "id": "kubernetesVersion",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "kubernetesVersion",
  },
  {
    "cell": "-",
    "header": "CPU",
    "id": "cpu",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "cpu",
  },
  {
    "cell": "-",
    "header": "Memory",
    "id": "memory",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "memory",
  },
  {
    "cell": "-",
    "header": "Console URL",
    "id": "cluster-consoleURL",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "consoleURL",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 10,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-clusteroperator 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Version",
    "id": "version",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "version",
  },
  {
    "cell": "-",
    "header": "Available",
    "id": "available",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "available",
  },
  {
    "cell": "-",
    "header": "Progressing",
    "id": "progressing",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "progressing",
  },
  {
    "cell": "-",
    "header": "Degraded",
    "id": "degraded",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "degraded",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-clusterserviceversion 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Version",
    "id": "version",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "version",
  },
  {
    "cell": "-",
    "header": "Phase",
    "id": "phase",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "phase",
  },
  {
    "cell": "-",
    "header": "Display",
    "id": "display",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "display",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cronjob 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "schedule",
    "id": "schedule",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "schedule",
  },
  {
    "cell": "-",
    "header": "Suspend",
    "id": "suspend",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "suspend",
  },
  {
    "cell": "-",
    "header": "Active",
    "id": "active",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "active",
  },
  {
    "cell": <AcmTimestamp />,
    "header": "Last schedule",
    "id": "cronjob-lastSchedule",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "lastSchedule",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-daemonset 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Desired",
    "id": "desired",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "desired",
  },
  {
    "cell": "-",
    "header": "Current",
    "id": "current",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "current",
  },
  {
    "cell": "-",
    "header": "Ready",
    "id": "ready",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "ready",
  },
  {
    "cell": "-",
    "header": "Updated",
    "id": "updated",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "updated",
  },
  {
    "cell": "-",
    "header": "Available",
    "id": "available",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "available",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 10,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployable 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": "-",
    "header": "Chart URL",
    "id": "chartUrl",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "chartUrl",
  },
  {
    "cell": "-",
    "header": "Dependencies",
    "id": "dependencies",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "dependencies",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployment 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Desired",
    "id": "desired",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "desired",
  },
  {
    "cell": "-",
    "header": "Current",
    "id": "current",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "current",
  },
  {
    "cell": "-",
    "header": "Ready",
    "id": "ready",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "ready",
  },
  {
    "cell": "-",
    "header": "Available",
    "id": "available",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "available",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-genericresource 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-helmrelease 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Source type",
    "id": "sourceType",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "sourceType",
  },
  {
    "cell": "-",
    "header": "URL",
    "id": "url",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "url",
  },
  {
    "cell": "-",
    "header": "Chart path",
    "id": "chartPath",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "chartPath",
  },
  {
    "cell": "-",
    "header": "Branch",
    "id": "branch",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "branch",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-job 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Completions",
    "id": "completions",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "completions",
  },
  {
    "cell": "-",
    "header": "Parallelism",
    "id": "parallelism",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "parallelism",
  },
  {
    "cell": "-",
    "header": "Successful",
    "id": "successful",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "successful",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-namespace 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "status",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-node 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Role",
    "id": "role",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "role",
  },
  {
    "cell": "-",
    "header": "Architecture",
    "id": "architecture",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "architecture",
  },
  {
    "cell": "-",
    "header": "OS image",
    "id": "osImage",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "osImage",
  },
  {
    "cell": "-",
    "header": "CPU",
    "id": "cpu",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "cpu",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolume 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Type",
    "id": "type",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "type",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Capacity",
    "id": "capacity",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "capacity",
  },
  {
    "cell": "-",
    "header": "Access mode",
    "id": "accessMode",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "accessMode",
  },
  {
    "cell": "-",
    "header": "Claim",
    "id": "claimRef",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "claimRef",
  },
  {
    "cell": "-",
    "header": "Reclaim policy",
    "id": "reclaimPolicy",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "reclaimPolicy",
  },
  {
    "cell": "-",
    "header": "Path",
    "id": "path",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "path",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 10,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 11,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolumeclaim 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Persistent volume",
    "id": "volumeName",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "volumeName",
  },
  {
    "cell": "-",
    "header": "Requests",
    "id": "request",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "request",
  },
  {
    "cell": "-",
    "header": "Access mode",
    "id": "accessMode",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "accessMode",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementbinding 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": "-",
    "header": "Subjects",
    "id": "subjects",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "subjects",
  },
  {
    "cell": "-",
    "header": "Placement policy",
    "id": "placementpolicy",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "placementpolicy",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementpolicy 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": "-",
    "header": "Replicas",
    "id": "replicas",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "replicas",
  },
  {
    "cell": "-",
    "header": "Decisions",
    "id": "decisions",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "decisions",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementrule 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Replicas",
    "id": "replicas",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "replicas",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-pod 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Restarts",
    "id": "restarts",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "restarts",
  },
  {
    "cell": "-",
    "header": "Host IP",
    "id": "hostIP",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "hostIP",
  },
  {
    "cell": "-",
    "header": "Pod IP",
    "id": "podIP",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "podIP",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policy 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Disabled",
    "id": "disabled",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "disabled",
  },
  {
    "cell": "-",
    "header": "Violations",
    "id": "policy-compliance",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "compliant",
  },
  {
    "cell": "-",
    "header": "Remediation action",
    "id": "remediationAction",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "remediationAction",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policyreport 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "scope",
    "header": "Scope",
    "id": "policyreport-scope",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "scope",
    "tooltip": "Scope refers to the cluster associated to the PolicyReport.",
  },
  {
    "cell": "-",
    "header": "Critical",
    "id": "critical",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "critical",
  },
  {
    "cell": "-",
    "header": "Important",
    "id": "important",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "important",
  },
  {
    "cell": "-",
    "header": "Moderate",
    "id": "moderate",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "moderate",
  },
  {
    "cell": "-",
    "header": "Low",
    "id": "low",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "low",
  },
  {
    "cell": "-",
    "header": "Rules",
    "id": "policyreport-rules",
    "isFirstVisitChecked": true,
    "order": 7,
    "tooltip": "Use the rules filter to search for PolicyReports that contain a specific rule.",
  },
  {
    "cell": "-",
    "header": "Categories",
    "id": "policyreport-categories",
    "isFirstVisitChecked": true,
    "order": 8,
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-release 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Chart name",
    "id": "chartName",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "chartName",
  },
  {
    "cell": "-",
    "header": "Chart version",
    "id": "chartVersion",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "chartVersion",
  },
  {
    "cell": <AcmTimestamp />,
    "header": "Updated",
    "id": "release-updated",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "updated",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-replicaset 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Desired",
    "id": "desired",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "desired",
  },
  {
    "cell": "-",
    "header": "Current",
    "id": "current",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "current",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-secret 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Type",
    "id": "type",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "type",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-service 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Type",
    "id": "type",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "type",
  },
  {
    "cell": "-",
    "header": "Cluster IP",
    "id": "clusterIP",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "clusterIP",
  },
  {
    "cell": "-",
    "header": "Port",
    "id": "port",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "port",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-statefulset 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Desired",
    "id": "desired",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "desired",
  },
  {
    "cell": "-",
    "header": "Current",
    "id": "current",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "current",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription.apps.open-cluster-management.io 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Package",
    "id": "package",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "package",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Local placement",
    "id": "localPlacement",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "localPlacement",
  },
  {
    "cell": "-",
    "header": "Time window",
    "id": "timeWindow",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "timeWindow",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription.operators.coreos.com 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Package",
    "id": "package",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "package",
  },
  {
    "cell": "-",
    "header": "Source",
    "id": "source",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "source",
  },
  {
    "cell": "-",
    "header": "Channel",
    "id": "Channel",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "Channel",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachine 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Ready",
    "id": "ready",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "ready",
  },
  {
    "cell": <VMLaunchLinks
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
      t={[Function]}
    />,
    "header": "External links",
    "id": "virtualmachine-launch-links",
    "isFirstVisitChecked": true,
    "order": 6,
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachineinstance 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Node",
    "id": "node",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "node",
  },
  {
    "cell": "-",
    "header": "IP address",
    "id": "ipaddress",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "ipaddress",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachinesnapshot 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "_conditionReadyReason",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "_conditionReadyReason",
  },
  {
    "cell": <VMSnapshotIndications
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Indications",
    "id": "virtualmachinesnapshot-indications",
    "isFirstVisitChecked": true,
    "order": 5,
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "created",
  },
]
`;

exports[`Correctly returns category components 1`] = `
<AcmLabels
  collapse={[]}
  labels={
    [
      "testcategory=category1",
      "testcategory=category2",
    ]
  }
/>
`;

exports[`Correctly returns empty CreateApplicationTopologyLink 1`] = `
<body>
  <div>
    <div>
      -
    </div>
  </div>
</body>
`;

exports[`Correctly returns empty CreateExternalLink 1`] = `"-"`;

exports[`Correctly returns empty CreateExternalVMLink 1`] = `
<body>
  <div>
    -
  </div>
</body>
`;

exports[`Correctly returns empty VirtualMachineSnapshot indications 1`] = `
<body>
  <div>
    -
  </div>
</body>
`;

exports[`Correctly returns empty labels 1`] = `"-"`;

exports[`Correctly returns label components 1`] = `
<AcmLabels
  collapse={[]}
  labels={
    [
      "testlabel=label1",
      "testlabel=label2",
    ]
  }
/>
`;

exports[`Correctly returns policyreport policies 1`] = `
<AcmLabels
  collapse={
    [
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
  labels={
    [
      "AUTH_OPERATOR_PROXY_ERROR",
      "CONTAINER_ROOT_PARTITION_SIZE",
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
/>
`;

exports[`Correctly returns resource with managedHub column: SearchDefinitions-global-node 1`] = `
[
  {
    "cell": <CreateGlobalSearchDetailsLink
      item={
        {
          "apiversion": "v1",
          "cluster": "testCluster",
          "kind": "Node",
          "managedHub": "testManagedHub",
          "name": "node.1",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": <React.Fragment>
      testCluster
      <Content>
        <Content
          component="small"
        >
          testManagedHub
        </Content>
      </Content>
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": true,
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Role",
    "id": "role",
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "role",
  },
  {
    "cell": "-",
    "header": "Architecture",
    "id": "architecture",
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "architecture",
  },
  {
    "cell": "-",
    "header": "OS image",
    "id": "osImage",
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "osImage",
  },
  {
    "cell": "-",
    "header": "CPU",
    "id": "cpu",
    "isFirstVisitChecked": true,
    "order": 7,
    "sort": "cpu",
  },
  {
    "cell": <AcmTimestamp />,
    "header": "Created",
    "id": "created",
    "isFirstVisitChecked": true,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": "-",
    "header": "Labels",
    "id": "label",
    "isFirstVisitChecked": true,
    "order": 9,
    "sort": "label",
  },
]
`;

exports[`Correctly returns url search params with 0 params 1`] = `"?cluster%3DtestCluster"`;

exports[`Correctly returns url search params with all params & apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;

exports[`Correctly returns url search params with all params without apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;
